Kubernetes/commands.yml
apiVersion: v1
kind: Pod
metadata:
  name: command-pod
  labels:
    purpose: demonstrate-command-pod
spec:
  containers:
  - name: command-pod-container
    image: debian
    command: ["printenv"]
    args: ["HOSTNAME", "KUBERNETES_PORT"]
  restartPolicy: OnFailure


---
apiVersion: v1
kind: Pod
metadata:
  name: command-pod
  labels:
    purpose: demonstrate-command-pod
spec:
  containers:
  - name: command-pod-container
    image: debian
    command: ["/bin/echo"]
    args: ["$(MESSAGE)"]


---
apiVersion: v1
kind: Pod
metadata:
  name: command-pod
  labels:
    purpose: demonstrate-command-pod
spec:
  containers:
  - name: command-pod-container
    image: mysql
    ports:
       - containerPort: 3306
    command: ["bin/echo"]
    args: [$(MYSQL_ROOT_PASSWORD)]
