Kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vproapp-deployment
  labels:
    app: vproapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: vproapp
  template:
    metadata:
      labels:
        app: vproapp
    spec:
      containers:
      - name: vproapp
        image: opeseen/tweenimg:v1
        ports:
        - name: vproapp-port
          containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: vproapp-svc
spec:
  ports:
  - port: 80
    nodePort: 30001
    targetPort: vproapp-port
    protocol: TCP
  selector:
    app: vproapp
  type: NodePort
