Kubernetes/pod.yml
# vproapp Pod and SVC and LoadBalancer
apiVersion: v1
kind: Pod
metadata:
  name: vproapp
  labels:
    app: vproapp
spec:
  containers:
    - name: appcontainer
      image: opeseen/tweenimg:v1
      ports:
        - name: vproapp-port
          containerPort: 80


---
apiVersion: v1
kind: Service
metadata:
  name: tween-service
spec:
  ports:
  - port: 80
    nodePort: 30001
    targetPort: vproapp-port
    protocol: TCP
  selector:
    app: vproapp
  type: NodePort


---
apiVersion: v1
kind: Service
metadata:
  name: tween-service-elb
spec:
  ports:
  - port: 80
    targetPort: vproapp-port
    protocol: TCP
  selector:
    app: vproapp
  type: LoadBalancer


# NGINX POD
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 80




# TESTING
---

apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    app.kubernetes.io/name: proxy
spec:
  containers:
  - name: nginx
    image: nginx:stable
    ports:
      - containerPort: 80
        name: http-web-svc

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app.kubernetes.io/name: proxy
  ports:
  - name: name-of-service-port
    protocol: TCP
    port: 8090
    targetPort: http-web-svc
    nodePort: 30001
  type: NodePort
