Kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vproapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: opeyemidevops.info
      http:
        paths:
         - path: /
           pathType: Prefix
           backend:
            service:
              name: vproapp-svc
              port:
                number: 80
